# Crozet

./: .gitignore  .gitmodules  CMakeLists.txt  Crozet.sln  License.md  README.md
examples/: main.cpp
include/Crozet/: Crozet.hpp  CrozetDecl.hpp  CrozetTypes.hpp
include/Crozet/Core/: AudioDevice.hpp  AudioInput.hpp  AudioOutput.hpp  Core.hpp  CoreDecl.hpp  CoreTypes.hpp  FilterBase.hpp  FilterPlaySpeed.hpp  SoundBase.hpp  SoundBuffer.hpp  SoundFile.hpp  SoundSource.hpp  types.hpp
include/Crozet/Core/templates/: AudioOutput.hpp  SoundBase.hpp
include/Crozet/Private/: Private.hpp
src/Core/: AudioDevice.cpp  AudioInput.cpp  AudioOutput.cpp  FilterBase.cpp  FilterPlaySpeed.cpp  SoundBase.cpp  SoundBuffer.cpp  SoundFile.cpp  SoundSource.cpp
src/Crozet/Core/: AudioDevice.cpp  AudioInput.cpp  AudioOutput.cpp  FilterBase.cpp  FilterPlaySpeed.cpp  SoundBase.cpp  SoundBuffer.cpp  SoundFile.cpp  SoundSource.cpp
vs/Crozet/: Crozet.vcxproj  Crozet.vcxproj.filters
vs/CrozetExamples/: CrozetExamples.vcxproj
